# name-tracker

./: .gitignore  Cargo.toml  README.md  names.txt
src/: main.rs
ui/: appwindow.slint
