[package]
name = "slint-example"
version = "0.1.0"
authors = ["guillefdeez <guillermo.fernandez.283@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.5"

[build-dependencies]
slint-build = "1.5"
